I think i fixed the title page layout up on mobile

--- a/index-new.css
+++ b/index-new.css
@@ -89,10 +89,10 @@ form {
     text-align: center;
    
 }
-.form-player-body input,.form-player-body select {
+/* .form-player-body input,.form-player-body select {
     width: 10vw;
     height: 2vw;
-}
+} */
 .player-information {
     overflow: hidden;
     position: relative;
